Apply huge z-index on `.mctb` wrapper element because def4609b89e4ea2325985128366e2499b2fbf599 adds a top offset in case of admin bar. See #52, fixes #53

--- a/assets/scss/bar.scss
+++ b/assets/scss/bar.scss
@@ -144,10 +144,6 @@ $mobile_max: 580px;
 	margin: 0;
 	background: transparent;
 	text-align: center;
-}
-
-.mctb-bar,
-.mctb-close {
 	z-index: 999999;
 }
 
@@ -192,7 +188,6 @@ $mobile_max: 580px;
 	float: right;
 	margin-right: 12px;
 	cursor: pointer;
-	z-index: 200;
 	clear: both;
 }
 
